# digest

./: .gitignore  .gitmodules  CHANGELOG.md  digest.cabal  shell.nix
.github/workflows/: haskell-ci.yml
Data/Digest/: CRC32C.hs
testing/: trivial-reference.c  trivial.expected  trivial.hs
testing/crc32c/: crc32c_config.h
